se corrige app para rendir

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,6 +47,9 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="./productos/">Ver Productos</a>
                   </li>
+                  <li>
+                    <a class="nav-link active" aria-current="page" href="./categoria/">Ver Catergorias</a>
+                  </li>
                 </ul>
               </div>
             </div>
