elaboracion de actualizar account

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,7 @@
           <a href="./user/"><img src="img/icon_nav.png" alt="Node.js icon" class="nav-icon"></a>
         </div>
         <div class="me-2">
+          <a class="btn login-bnt" href="./account/me">Mi Cuenta</a>
           <a class="btn login-bnt" href="./login/logout">Logout</a>
         </div>
       </div>
