--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,7 +31,7 @@
         <br>
         <div class="me-auto">
           <div class = "">
-            <form action="" method="POST">
+            <form action="./login" method="POST">
                 <div class="row center">
                 <div class="col-4">
                     <label for="username" class="form-label">Usuario</label>
