--- a/views/2_deleteAccount.ejs
+++ b/views/2_deleteAccount.ejs
@@ -38,37 +38,29 @@
   <div class="centereddd" width="100vw">
     <div class="text-center">
       <br>
-      <h2>Actualizar su cuenta</h2>
+      <h2>¿DESEA ELIMINAR SU CUENTA?</h2>
     </div>
     <br>
     <br>
-    <form action="./meUpdate/<%= user.id %>" method="POST">
+    <form action="./delete/<%= user.id %>" method="post">
       <div class="row center">
         <div class="col-6">
           <label for="username" class="form-label">Username</label>
-          <input type="text" name="username" id="username" class="form-control" value="<%= user.username %>">
+          <input type="text" name="username" id="username" class="form-control" disable value="<%= user.username %>">
         </div>
       </div>
       <br>
       <div class="row center">
-      <div class="col-6">
-          <label for="email" class="form-label">Email</label>
-          <input type="text" name="email" id="email" class="form-control" value="<%= user.email %>">
-         </div>
-      </div>
-      <br>
-      <div class="row center">
-        <div class="col-6">
-          <label for="contraseña" class="form-label">Contraseña</label>
-          <input type="password" name="contraseña" id="contraseña" class="form-control">
-         </div>
-      </div>
-      <br><br><br>
        <div class="row center">
         <div class="col-4">
-            <button type="submit" class="btn primary-btn">Actualizar Mi Cuenta</button>
-            <a href="./delete" class="btn btn-danger ">Eliminar Cuenta</a>
+          <div class="float-start">
+              <button type="submit" class="btn btn-danger">Si Eliminar</button>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="float-end">
             <a href="../" class="btn secondary-btn">Volver al Home</a>
+          </div>
         </div>
       </div>
     </form>
